# graph-link-prediction

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
.github/actions/setup-uv-env/: action.yml
.github/linters/: .mypy.ini
.github/workflows/: main.yml  tests.yml
artifacts_test/20251110-144501/: config_used.yaml  metrics.json
artifacts_test/cache/: semantic_66c5dce91846.npy
configs/: ablations.yaml  full.yaml  quickstart.yaml  test.yaml
docs/: graphsage.md
graph_lp/: __init__.py  cli.py  embeddings.py  eval.py  features.py  graph.py  graphsage.py  io.py  metrics.py  models.py  server.py  train.py  utils.py
graph_lp/sample_data/quickstart/: edges.csv  ground_truth.csv  nodes.csv
notebooks/: colab_runner.ipynb  graphsage_runner.ipynb  hybrid_runner.ipynb
scripts/: cross_evaluate_on_ground_truth.py  export_artifacts.sh  run_ablation.sh  test_pipeline.py
tests/: test_cli.py  test_embeddings.py  test_eval.py  test_features.py  test_graph.py  test_graphsage.py  test_io.py  test_leakage.py  test_metrics.py  test_models.py  test_server.py  test_train.py  test_utils.py
